--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -48,6 +48,7 @@ tooltip {
     border-radius: 10px;
 }
 
+#custom-arch,
 #custom-language,
 #custom-updates,
 #custom-caffeine,
@@ -76,8 +77,8 @@ tooltip {
 
 #workspaces {
     background: #1e1e2e;
-    border-radius: 10px;
-    margin-left: 10px;
+    border-radius: 0px 10px 10px 0px;
+    margin-right: 10px;
     padding-right: 0px;
     padding-left: 5px;
 }
@@ -124,6 +125,7 @@ tooltip {
     color: #fab387;
     border-radius: 10px 10px 10px 10px;
     margin-left: 5px;
+    margin-right: 10px;
     border-right: 0px;
 }
 
@@ -147,7 +149,6 @@ tooltip {
 #battery {
     color: #a6e3a1;
     border-radius: 0 10px 10px 0;
-    margin-right: 10px;
     border-left: 0px;
 }
 
@@ -155,4 +156,10 @@ tooltip {
     border-radius: 0px 10px 10px 0px;
     border-right: 0px;
     margin-left: 0px;
+}
+
+#custom-arch {
+    border-radius: 10px 0px 0px 10px;
+    border-right: 0px;
+    margin-left: 10px;
 }
