--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,3 +1,5 @@
+@import "colors-waybar.css";
+
 * {
     border: none;
     border-radius: 0;
@@ -13,7 +15,7 @@ window#waybar {
 }
 
 tooltip {
-    background: #1e1e2e;
+    background: #070711;
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
@@ -48,6 +50,7 @@ tooltip {
     border-radius: 10px;
 }
 
+#custom-toggle-lock,
 #custom-arch,
 #custom-language,
 #custom-updates,
@@ -63,7 +66,7 @@ tooltip {
 #cpu,
 #memory,
 #backlight {
-    background: #1e1e2e;
+    background: #070711;
     padding: 0px 10px;
     margin: 3px 0px;
     margin-top: 10px;
@@ -76,7 +79,7 @@ tooltip {
 }
 
 #workspaces {
-    background: #1e1e2e;
+    background: #070711;
     border-radius: 0px 10px 10px 0px;
     margin-right: 10px;
     padding-right: 0px;
@@ -122,7 +125,7 @@ tooltip {
 }
 
 #clock {
-    color: #fab387;
+    color: @color3;
     border-radius: 10px 10px 10px 10px;
     margin-left: 5px;
     margin-right: 10px;
@@ -130,14 +133,14 @@ tooltip {
 }
 
 #network {
-    color: #f9e2af;
+    color: @color2;
     border-radius: 10px 0px 0px 10px;
     border-left: 0px;
     border-right: 0px;
 }
 
 #pulseaudio {
-    color: #89b4fa;
+    color: @color5;
     border-left: 0px;
     border-right: 0px;
 }
@@ -147,7 +150,7 @@ tooltip {
 }
 
 #battery {
-    color: #a6e3a1;
+    color: @color4;
     border-radius: 0 10px 10px 0;
     border-left: 0px;
 }
@@ -159,7 +162,15 @@ tooltip {
 }
 
 #custom-arch {
+    color: @color5;
     border-radius: 10px 0px 0px 10px;
     border-right: 0px;
     margin-left: 10px;
+}
+
+#custom-toggle-lock {
+    color: @color6;
+    border-radius: 10px 10px 10px 10px;
+    margin-right: 5px;
+    padding-right: 15px;
 }
